# seis-hydro-2-sed

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  REPRODUCIBILITY.md  RESUME.md  REVIEW_2026.md  _quarto.yml  environment.yml  index.qmd  pixi.toml  pyproject.toml  roadmap2paper.md  science-plan.md
.githooks/: pre-commit
config/: _elev.cpt  _map_legend.txt  _transect_discovery.json  _water.cpt  analysis.yaml  ar_windows.json  attenuation_fit.json  aux_timeseries.json  bedload_ch_fit.json  bedload_per_AR.json  braid_optical_change.json  braid_optical_change_nisqually.json  braided_hysteresis.json  braided_reorg_timing_nisqually.json  braided_reorg_timing_puyallup.json  cc_stations.json  discharge_manifest.json  hazard_timing_clogging.json  map_layers.json  nhd_rivers.json  rating_fits.json  rating_geometry.json  rating_hysteresis.json  station_status.json  threshold_qc.json  traffic_noise.json  transect_puyallup.yaml  uw_stations.json  virtual_q.json  virtual_q_fit.json  warm_ar_snotel.json
notebooks/: utils.py  uw_river_rumble_dec2025.ipynb  uw_river_rumble_dec2025_skykomish.ipynb
old/: README.md  paper_v0.md  uw_river_rumble_dec2025.ipynb.bak
paper/: EXPLORATION_2026.md  LITERATURE.md  ROADMAP.md  paper.qmd  paper_restructured.qmd  references.bib  references.qmd  supplement.qmd  supplement_restructured.qmd
reviews/: fluvial-geomorph_2026-06-26.md  lidar_data_sources_2026-06-27.md  montgomery_feedback_2026-06-26.md  pre_submission_2026-07-01.md
scripts/: fetch_planetscope_pr01.py  refactor_band_only_notebook.py  run_river_rumble_batch.py
(+104 files in other folders)
